--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -1206,7 +1206,7 @@ ol.list-num-count.list-outline-none>li:before {
 }
 
 .p-a20 {
-	padding: 20px;
+	padding: 41px;
 }
 
 .p-a25 {
@@ -3553,12 +3553,12 @@ ol.list-num-count.list-outline-none>li:before {
 }
 
 .site-button:hover {
-	background-color: #222;
+	background-color: #da223c;
 	color: #fff;
 }
 
 .site-button-secondry {
-	background-color: #222;
+	background-color: #da223c;
 	color: #fff;
 }
 
@@ -3566,7 +3566,7 @@ ol.list-num-count.list-outline-none>li:before {
 .site-button-secondry:hover,
 .site-button-secondry:focus,
 .active>.site-button-secondry {
-	background-color: #222;
+	background-color: #da223c;
 	color: #fff;
 }
 
@@ -5022,15 +5022,15 @@ position:relative;
 .acc-bg-white .acod-head a:hover,
 .acc-bg-white .acod-head a:active,
 .acc-bg-white .acod-head a:focus {
-	color: #222;
+	color: #da223c;
 }
 
 .acc-bg-white .acod-head .indicator {
-	color: #222;
+	color: #da223c;
 }
 
 .acc-bg-white.acc-has-bg .acod-body {
-	color: #222;
+	color: #da223c;
 }
 
 
@@ -5456,7 +5456,7 @@ position:relative;
 }
 
 .pricing-table-style-5 .pricingtable-title * {
-	color:#222;
+	color:#da223c;
 	font-weight:700;
 }
 .pricing-table-style-5 .pricingtable-price{
@@ -7880,7 +7880,7 @@ ol.comment-list li.comment .comment-respond .comment-form p {
 }
 
 .latest-blog-4.blog-md .mt-post-meta i {
-	color: #222222;
+	color: #da223c222;
 }
 
 @media only screen and (max-width:991px) {
@@ -8081,13 +8081,13 @@ HEADER (top part of page)
 
 .appint-btn a{
 	font-size:12px;
-	color:#222;
+	color:#da223c;
 	text-transform:uppercase;
 	font-weight:600;
 	letter-spacing:1px;
 }
 .appint-btn a:hover{
-	background-color:#222;
+	background-color:#da223c;
 	color:#fff;
 }
 /*-------------------------------------
@@ -8362,7 +8362,7 @@ padding:7px 0px;
 }
 
 .header-botton {
-	background-color: #222;
+	background-color: #da223c;
 }
 
 .header-botton .header-nav .nav {
@@ -8409,7 +8409,7 @@ padding:7px 0px;
 	padding:0px 0;
 	background-color:#eeeeee;
 }
-.top-bar.bg-gray .fa{color:#222;}
+.top-bar.bg-gray .fa{color:#da223c;}
 .top-bar .fa {
 	color:#ffffff;
 	vertical-align: middle;
@@ -8577,7 +8577,7 @@ padding:7px 0px;
 	border-radius: 0;
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
-	color: #222;
+	color: #da223c;
 	font-size: 14px;
 	padding: 35px 12px;
 	cursor: pointer;
@@ -10108,7 +10108,7 @@ padding:7px 0px;
 }
 
 .footer-dark .footer-bottom {
-	background-color: #222222;
+	background-color: #da223c222;
 }
 
 .footer-dark .footer-top h1,
@@ -11509,7 +11509,7 @@ font-size:68px;
 
 .our-story .row:nth-child(odd) .our-story-detail {
 	margin-left: 50px;
-	background-color:#222;
+	background-color:#da223c;
 	color:#fff;
 	padding:30px;
 }
@@ -11520,11 +11520,11 @@ font-size:68px;
 .our-story .row:nth-child(even) .our-story-detail {
 	margin-right: 50px;
 	background-color:#fff;
-	color:#222;
+	color:#da223c;
 	padding:30px;
 }
 .our-story .row:nth-child(even) .our-story-detail h4 {
-	color:#222;
+	color:#da223c;
 }
 
 
@@ -12276,8 +12276,8 @@ font-size:68px;
 	margin-top: -51px;
 	width: 60%;
 	margin-left: 20%;
-	color: #222;
-	border: 1px solid #222;
+	color: #da223c;
+	border: 1px solid #da223c;
 	font-size: 40px;
 	font-weight: 300;
 	text-align: left;
@@ -12322,7 +12322,7 @@ font-size:68px;
 	position: absolute;
 	width: 2px;
 	height: 32px;
-	background-color: #222;
+	background-color: #da223c;
 	right: 20px;
 	top: 0px;
 }
@@ -12791,7 +12791,7 @@ font-size:68px;
 	height: 24px;
 	line-height: 24px;
 	display: inline-block;
-	color: #222;
+	color: #da223c;
 }
 .full-social-bg li a:hover i {
 	color:#fff;
@@ -12895,7 +12895,7 @@ transition: all 0.5s linear;
 
 .our-team-1 h5 {
   font-weight: 400;
-  color: #222;
+  color: #da223c;
 }
 
 .our-team-1 .icons i {
@@ -12972,7 +12972,7 @@ transition: all 0.5s linear;
 
 .our-team-2 .icons i:hover {
   color: #fff;
-  background-color: #222;
+  background-color: #da223c;
 }
 
 .our-team-2 .icons i a {
@@ -13616,7 +13616,7 @@ transition: all 0.5s linear;
 
 .site-button-secondry.btn-effect:before,
 .site-button-secondry.btn-effect:after{
-  border-color: #222;
+  border-color: #da223c;
 }
 
 .site-button.btn-effect:before,
@@ -13626,7 +13626,7 @@ transition: all 0.5s linear;
 
 .site-button:hover.btn-effect:before,
 .site-button:hover.btn-effect:after{
-  border-color: #222;
+  border-color: #da223c;
 }
 
 
@@ -14622,13 +14622,13 @@ height: 40px;
 text-align: center;
 display: inline-block;
 line-height: 40px;
-background-color: #222;
+background-color: #da223c;
 margin-left: 10px;
 color:#fff;
 }
 .image-effect-two .mfp-link:hover{
 	background-color:#F5BF23;
-	color:#222;
+	color:#da223c;
 }
 
 /*-------------------------
