--- a/templates/web/blog.html
+++ b/templates/web/blog.html
@@ -11,7 +11,7 @@
                     <div class="mt-bnr-inr-entry">
                     	<div class="banner-title-outer">
                         	<div class="banner-title-name">
-                        		<h2 class="m-b0">In our work we have pride, quality is what we provide.</h2>
+                        		<h2 class="m-b0">Get updated with the latest trends in the construction industry</h2>
                             </div>
                         </div>
                         <!-- BREADCRUMB ROW -->                            
