--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -12,7 +12,7 @@
                     <div class="mt-bnr-inr-entry">
                     	<div class="banner-title-outer">
                         	<div class="banner-title-name">
-                        		<h2 class="m-b0">Putting a plan to action, to assure your satisfaction!</h2>
+                        		<h2 class="m-b0">Keep in touch to reach your best benefits from us!</h2>
                             </div>
                         </div>
                         <!-- BREADCRUMB ROW -->                            
