--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -594,9 +594,9 @@
                         	<div class="col-lg-3 col-md-12 col-sm-6 m-b30">
                             
                                 <div class="mt-box our-speciallization-content">
-                                	<h3 class="m-t0"><span class="font-weight-100">Building</span> <br>It better in concrete.</h3>
-                                    <p>When it comes to your house, don’t mess with the rest, trust the best. Making your vision come true, that is what we do.</p>
-                                    <a class="site-button btn-effect">View All</a>
+                                	<h3 class="m-t0"><span class="font-weight-100">Building</span> <br>Solutions in one place.</h3>
+                                    <p>We deliver complete building solutions for customers all over Kerala at the best reasonable price and superior quality.</p>
+                                    <a class="site-button btn-effect" href="/about/">View All</a>
                                 </div> 
                                                               
                             </div>                            
@@ -616,7 +616,7 @@
 					<div class="section-head">
 						<div class="mt-separator-outer separator-center">
 							<div class="mt-separator">
-								<h2 class="text-white text-uppercase sep-line-one "><span class="font-weight-300 text-primary">About</span> Company</h2>
+								<h2 class="text-white text-uppercase sep-line-one "><span class="font-weight-300 text-primary">About</span> EXCEL</h2>
 							</div>
 						</div>
 					</div>                   
@@ -660,16 +660,10 @@
                            		</div>
                                 
                                 <div class="col-md-3 col-sm-12">
-                                	<div class="about-home-right bg-white p-a30">
-                                    	<h3 class="m-t0"><span class="font-weight-100">Committed</span> to superior quality and  results.</h3>
-                                        <p><strong>Contrary to popular belief, lorem Ipsum is not 
-                                                simply text. It has roots in a piece of 
-                                                classical Latin literature from 45 BC, making it 
-                                                over 2000 years old.</strong></p>
-                                        <p>There are many variations of passages of lorem  available, but the majority have suffered 
-                                            alteration in some form, by inject humour, or 
-                                            randomised words which don't look even slightly 
-                                            believable. </p>
+                                	<div class="about-home-right bg-white p-a30"> 
+                                    	<h3 class="m-t0"><span class="font-weight-100">Delivering </span>Best-Grade Products For You.</h3>
+                                        <p><strong>Excel Traders is one of the finest dealers of TMT bars, cement, steel pipes, sheets, nets, and building materials in Kerala.</strong></p>
+                                        <p>We work on a vision to deliver superior quality products for customers all over Kerala at the best reasonable price.  </p>
                                         <div class="text-right">
                                             <a href="{% url 'web:about' %}" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a>
                                         </div>                                                    
@@ -697,11 +691,11 @@
                                             <div class="mt-separator">
                                                 <h2 class="text-uppercase sep-line-one "><span class="font-weight-300 text-primary">Our</span> Value</h2>
                                             </div>
-     										<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.there are many 																				                                                     variations of passages of Ipsum available,</p>                                            
+     										<p>By providing the best quality products to customers all over Kerala for decades, excel traders have maintained a dominant position among their competitors. Get your best grade products from the leading brands at best offers from Excel Traders.</p>                                            
                                         </div>
                                     </div>                   
                                     <!-- TITLE END -->
-                                    <div class="author-info p-t20">
+                                    <!-- <div class="author-info p-t20">
                                     
                                         <div class="author-signature">
                                             <img src="{% static 'web/images/Signature%2bBlack.png' %}" alt="Signature" width="150">
@@ -710,7 +704,7 @@
                                             <h4 class="m-t0">David Houkr</h4>
                                             <p>Architect & Founder</p>
                                         </div>
-                                    </div>                                  
+                                    </div>                                   -->
                                     <div class="video-section-full bg-no-repeat bg-cover overlay-wraper" style="background-image:url({% static 'web/images/video-bg.jpg' %})">
                                     	<div class="overlay-main bg-black opacity-07"></div>
                                         <div class="video-section-inner">
@@ -810,17 +804,17 @@
                         <div class="row">
                         	<div class="col-md-4 col-sm-6">
                             	<div class="mission-left bg-white m-b30 p-a30 bg-no-repeat bg-bottom-left" style="background-image:url({% static 'web/images/background/bg-site.png' %});">
-                                	<h3 class="m-t0"><span class="font-weight-100"> Site Areas</span><br> what we serve</h3>
-                                    <p>lorem Ipsum available, but the majority have suffered alteration in some form, by ious versi ons have evolved over the years, sometimes by accident</p>
+                                	<h3 class="m-t0"><span class="font-weight-100"> Excel Traders</span><br>  For Excellent Buildings</h3>
+                                    <p>Best quality is the most necessary factor for every building requirement. We deliver the best-grade products without compromising the quality and yet presented in the best reasonable precise.</p>
                                     <ul class="list-angle-right anchor-line">
-                                        <li><a href="#">Construction Management</a></li>
-                                        <li><a href="#">Pre Construction Services</a></li>
-                                        <li><a href="#">Contract Administration</a></li>
-                                        <li><a href="#">Implementation</a></li>
-                                        <li><a href="#">Leed consultation</a></li>
+                                        <li><a href="#">High-quality products</a></li>
+                                        <li><a href="#">Best reasonable price</a></li>
+                                        <li><a href="#">Delicate customer service</a></li>
+                                        <li><a href="#">Value for your money</a></li>
+                                        <li><a href="#">Transparent transactions</a></li>
                                     </ul>
                                     <div class="text-right">
-                                    	<a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a>
+                                    	<a href="/products/" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -888,7 +882,7 @@
                                         <h2 class="text-white text-uppercase sep-line-one "><span class="font-weight-300 text-primary">Our</span> Products</h2>
                                     </div>
                                 </div>
-                                <h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</h3>
+                                <h3>Your search for building materials ends in Excel Traders, we are here to deliver fulfil your building necessities.</h3>
                             </div>                  
                             <!-- TITLE END -->
                         </div>
@@ -904,9 +898,9 @@
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/crane-1.png' %}" alt=""></span>
                                             </div>
-                                            <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Building <br>Construction</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                            <div class="icon-content"> 
+                                                <h4 class="mt-tilte m-b25">TMT Bars</h4>
+                                                <p>Build your dream projects with the high-grade TMT bars from Excel Traders, your trusted building partner.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -923,8 +917,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/renovation.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Building <br>Renovation</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                                <h4 class="mt-tilte m-b25">Steel Pipes & Sheets </h4>
+                                                <p>We make sure to deliver the most quality products to strengthen the foundation of your dream projects. </p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -941,8 +935,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Building <br>Maintenance</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                                <h4 class="mt-tilte m-b25">Cement and Net </h4>
+                                                <p>Build with the best quality cement and make your partitions with the best nest and meshes from Excel Traders.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -959,8 +953,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Architecture<br>Design</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                                <h4 class="mt-tilte m-b25">Building Materials</h4>
+                                                <p>Excel Traders delivers the complete solution for all your needs for building materials at the best reasonable price</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
