--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -45,7 +45,7 @@
                     <div class="logo-footer clearfix p-b15">
                         <a href="#"><img src="{% static 'web/images/logo.png' %}" alt=""></a>
                     </div>
-                    <p class="max-w400">Today we can tell you, thanks to your passion, hard work creativity, and expertise, you delivered us the most beautiful house great looks.</p>                                
+                    <p class="max-w400">Excel Traders is your best choice in purchasing building materials for the best quality and offers.</p>                                
                     
                     <ul class="social-icons  mt-social-links">
                         <li><a href="javascript:void(0);" class="fa fa-google"></a></li>
@@ -76,9 +76,10 @@
                 <div class="widget widget_services inline-links">
                     <h4 class="widget-title">Useful links</h4>
                     <ul>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="project-grid.html">Projects</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/about/">About</a></li>
+                        <li><a href="/products/">Products</a></li>
+                        <li><a href="/blog/">Updates</a></li>
+                        <li><a href="/gallery/">Gallery</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>                           
