--- a/templates/web/products.html
+++ b/templates/web/products.html
@@ -12,7 +12,7 @@
                     <div class="mt-bnr-inr-entry">
                     	<div class="banner-title-outer">
                         	<div class="banner-title-name">
-                        		<h2 class="m-b0">Diversified services. Unvarying quality.</h2>
+                        		<h2 class="m-b0">Presenting quality products for you</h2>
                             </div>
                         </div>
                         <!-- BREADCRUMB ROW -->                            
@@ -45,8 +45,9 @@
                                     </div>
                                     <div class="col-md-7 col-sm-12">
                                     	<div class="service-about-right m-b30">
-                                            <h3 class="m-t0">In our work we have pride, quality is what we provide.</h3>
-                                            <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. Due to its widespread use texts.  Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputa cumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                                            <h3 class="m-t0">Quality in materials for quality in project.</h3>
+                                            <p>Excel Traders is one of the largest and most reputable traders of TMT bars, cement, steel pipes, sheets and meshes in Kerala. Our goal is to provide all our customers in Kerala with the highest quality products at reasonable prices. When it comes to building materials, Excel Traders is the reliable choice in Kerala. We provide the highest quality products at the best reasonable prices without sacrificing quality.
+                                            </p>
                                             <!-- <div class="call-for-quote-outer">
                                             	<div class="call-quote">
                                                 	<span>Call For a Quote:</span>
@@ -72,9 +73,8 @@
                     <!-- IMAGE CAROUSEL START -->
                     <div class="section-content">
                         <div class="section-head m-b50 text-white text-center">
-                            <h3 class="m-t0">We are all constructed out of our self dialogue.</h3>
-                            <p>Wisi enim ad minim veniam, quis nostrud exerci tation ullamcorperadipiscing elit, sed diam nonummy
-nibh suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                            <h3 class="m-t0">Building trust with the strong base</h3>
+                            <p>Browse through our awesome product categories for all your building material requirements. Excel Traders delivers the best quality products for your building requirements.</p>
                         </div>
                         <div class="row">
                         	<div class="col-md-4 col-sm-6 m-b30">
@@ -82,8 +82,9 @@ nibh suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                                 <div class="image-effect-one hover-shadow">
                                     <img src="{% static 'web/images/services/1.jpg' %}" alt="" />
                                     <div class="figcaption">
-                                        <h4>Concept and Design</h4>
-                                        <p>Est notare quam littera gothica, quam nunc putamus parum claram.</p>
+                                        <h4>TMT bars</h4>
+                                        <p>Excel Traders offers top-quality TMT bars for your dream projects.
+                                        </p>
                                         <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
                                     </div>
                                     
@@ -96,8 +97,8 @@ nibh suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                                 <div class="image-effect-one hover-shadow">
                                     <img src="{% static 'web/images/services/2.jpg' %}" alt="" />
                                     <div class="figcaption">
-                                        <h4>Refurbishment</h4>
-                                        <p>Est notare quam littera gothica, quam nunc putamus parum claram.</p>
+                                        <h4>Cement </h4>
+                                        <p>Build with the best quality cement and make stronger buildings.</p>
                                         <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
                                     </div>
                                  
@@ -109,15 +110,64 @@ nibh suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                                 <div class="image-effect-one hover-shadow">
                                     <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
-                                        <h4>General Builder</h4>
-                                        <p>Est notare quam littera gothica, quam nunc putamus parum claram.</p>
+                                        <h4>Steel Pipes</h4>
+                                        <p>We make sure to deliver the most quality Pipes for every customer.
+                                        </p>
                                          <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
                                     </div>
                                    
                                 </div>
                                                               
                             </div>
-                        	                            
+
+
+                            <div class="col-md-4 col-sm-12 m-b30">
+                            
+                                <div class="image-effect-one hover-shadow">
+                                    <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
+                                    <div class="figcaption bg-dark">
+                                        <h4>Sheets</h4>
+                                        <p>Excel Traders delivers the best sheets for your roofing necessities.
+
+                                        </p>
+                                         <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
+                                    </div>
+                                   
+                                </div>
+                                                              
+                            </div>
+
+
+
+                            <div class="col-md-4 col-sm-12 m-b30">
+                            
+                                <div class="image-effect-one hover-shadow">
+                                    <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
+                                    <div class="figcaption bg-dark">
+                                        <h4>Net</h4>
+                                        <p>Build with the highest quality nets and meshes from Excel Traders.
+                                        </p>
+                                         <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
+                                    </div>
+                                   
+                                </div>
+                                                              
+                            </div>
+                        	
+                            
+                            <div class="col-md-4 col-sm-12 m-b30">
+                            
+                                <div class="image-effect-one hover-shadow">
+                                    <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
+                                    <div class="figcaption bg-dark">
+                                        <h4>Building Materials</h4>
+                                        <p>The complete solution for all your needs for building materials.</p>
+                                         <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
+                                    </div>
+                                   
+                                </div>
+                                                              
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -272,17 +322,18 @@ nibh suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                                         <div class="col-md-6">
                                             <div class="p-a30 bg-primary bg-bottom-right" style="background-image:url({% static 'web/images/background/bg-site.png' %});">
                                                 <div class="text-black">
-                                                    <h4 class="mt-tilte m-t0">Brochure</h4>
-                                                    <p>Typefaces and layouts, and in appearance of different general the content of dorem ipsum dolor sit amet. </p>
-                                                    <a href="javascript:;" class="site-button-secondry btn-half"><span> Download brochure</span></a>
+                                                    <h4 class="mt-tilte m-t0">TMT Bars & Steel Pipes</h4>
+                                                    <p>Get the best quality TMT steel bars and steel pipes for your best results in building requirements</p>
+                                                    <!-- <a href="javascript:;" class="site-button-secondry btn-half"><span> Download brochure</span></a> -->
                                                 </div>
                                             </div>                                    
                                         </div>
                                         <div class="col-md-6">
                                                 <div class="text-white p-r15">
-                                                    <h4 class="mt-tilte">Let's help you!</h4>
-                                                   <p>There are many variations of passages of lorem available, but the majority have suffered alteration in some form, by inject humour, or randomised words which don't look even slightly believable.</p>
-                                                    <a href="javascript:;" class="site-button btn-effect">Contact Us</a>
+                                                    <h4 class="mt-tilte">Cement & Building materials</h4>
+                                                   <p>Strengthen your foundation and base with the high-grade products from Excel Traders.
+                                                   </p>
+                                                    <a href="/contact/" class="site-button btn-effect">Contact Us</a>
                                                 </div>
     
                                         </div>
