--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -12,7 +12,7 @@
                     <div class="mt-bnr-inr-entry">
                     	<div class="banner-title-outer">
                         	<div class="banner-title-name">
-                        		<h2 class="m-b0">Creating quality urban lifestyles, building stronger communities.</h2>
+                        		<h2 class="m-b0">YOUR PERFECT PARTNER IN BUILDING MATERIALS</h2>
                             </div>
                         </div>
                         <!-- BREADCRUMB ROW -->                            
@@ -37,7 +37,7 @@
 					<div class="section-head">
 						<div class="mt-separator-outer separator-left">
 							<div class="mt-separator">
-								<h2 class="text-uppercase sep-line-one "><span class="font-weight-300 text-primary">About</span> Company</h2>
+								<h2 class="text-uppercase sep-line-one "><span class="font-weight-300 text-primary">About</span> EXCEL</h2>
 							</div>
 						</div>
 					</div>                   
@@ -86,19 +86,19 @@
                                         <span class="text-primary large-title">25</span>
                                         <span class="large-title-info">Years of Experience</span>
                                     </div>
-                                    <h3 class="font-weight-600">Improving quality of life with an integrated unified approach.</h3>
-                                    <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. Due to its widespread use texts.  Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputa cumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                                    <h3 class="font-weight-600">Enhancing your building quality with an integrated approach.</h3>
+                                    <p>Excel Traders is one of Kerala's largest and most distinguished dealers of TMT bars, cement, steel pipes, sheets, and nets. Our goal is to deliver superior quality products at a reasonable price to all customers in Kerala. Whenever a building needs to be built, top-quality materials should be used. Excel Traders is your trusted choice when it comes to building materials. We deliver products that are of the highest quality and present at the best reasonable price without compromising the quality.</p>
                                     <div class="author-info p-t20">
                                     
-                                        <div class="author-signature">
+                                        <!-- <div class="author-signature">
                                             <img src="{% static 'web/images/Signature%2bBlack.png' %}" alt="Signature" width="150"/>
                                         </div>
                                         
                                         <div class="author-name">
                                             <h4 class="m-t0">David Houkr</h4>
                                             <p>Architecture &amp; Founder</p>
-                                        </div>
-										<a href="javascript:void(0);" class="site-button btn-effect m-b15"><span>Get in touch</span></a>                                        
+                                        </div> -->
+										<a href="/contact/" class="site-button btn-effect m-b15"><span>Get in touch</span></a>                                        
                                         
                                     </div>
                                     
@@ -140,8 +140,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/crane-1.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Building <br>Construction</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                                <h4 class="mt-tilte m-b25">TMT Bars</h4>
+                                                <p>Build your dream projects with the high-grade TMT bars from Excel Traders, your trusted building partner.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -158,8 +158,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/renovation.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Building <br>Renovation</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                                <h4 class="mt-tilte m-b25">Steel Pipes & Sheets</h4>
+                                                <p>We make sure to deliver the most quality products to strengthen the foundation of your dream projects.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -176,8 +176,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Building <br>Maintenance</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                                <h4 class="mt-tilte m-b25">Cement and Net</h4>
+                                                <p>Build with the best quality cement and make your partitions with the best nest and meshes from Excel Traders.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -194,8 +194,8 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Architecture<br>Design</h4>
-                                                <p>lorem Ipsum available, but the majority have suffered alterati on in some form, by ious by accident.</p>
+                                                <h4 class="mt-tilte m-b25">Building Materials</h4>
+                                                <p>Excel Traders delivers the complete solution for all your needs for building materials at the best reasonable price.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -328,9 +328,9 @@
                             </div>
                         	<div class="col-md-8 col-sm-6">
                             	<div class="mt-box our-story-detail bg-moving bg-cover" style="background-image:url({% static 'web/images/background/line.png' %})">
-                                    <h4 class="text-uppercase m-b20">2011-12</h4>
-                                    <h4 class="m-b20">Eisenhower Memoria</h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged. </p>
+                                    <!-- <h4 class="text-uppercase m-b20">2011-12</h4> -->
+                                    <h4 class="m-b20">High-quality products</h4>
+                                    <p>Whenever you are on to a building process the requirements for high-grade materials will take your time and effort. Excel traders work on a mission to reduce your time and effort by delivering the best quality products for our awesome customers all over India. </p>
                                 </div>
                             </div>
                         </div>
@@ -345,9 +345,9 @@
                             </div>
                         	<div class="col-md-8 col-sm-6">
                             	<div class="mt-box our-story-detail bg-moving bg-cover" style="background-image:url({% static 'web/images/background/line.png' %})">
-                                   <h4 class="text-uppercase m-b20">2013-14</h4>
-                                    <h4 class="m-b20">Columbia Sport Center</h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged. </p>
+                                   <!-- <h4 class="text-uppercase m-b20">2013-14</h4> -->
+                                    <h4 class="m-b20">Best reasonable price</h4>
+                                    <p>Excel Traders is one of Kerala's most considerable and most prominent vendors of TMT bars, cement, steel pipes, sheets, and nets. We provide the whole solution for all your needs for building materials at the best reasonable price.</p>
                                 </div>
                             </div>                            
                         </div>
@@ -362,9 +362,9 @@
                             </div>
                         	<div class="col-md-8 col-sm-6">
                             	<div class="mt-box our-story-detail bg-moving bg-cover" style="background-image:url({% static 'web/images/background/line.png' %})">
-                                    <h4 class="text-uppercase m-b20">2015-16</h4>
-                                    <h4 class="m-b20">Park Boathouse</h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged. </p>
+                                    <!-- <h4 class="text-uppercase m-b20">2015-16</h4> -->
+                                    <h4 class="m-b20">Delicate customer service</h4>
+                                    <p>Excel Traders is your entrusted option when it comes to selecting the building material provider. We care for our customers, their needs and requirements to deliver the best quality products for customers all over Kerala.</p>
                                 </div>
                             </div>
                         </div> 
@@ -379,9 +379,9 @@
                             </div>                        
                             <div class="col-md-8 col-sm-6">
                             	<div class="mt-box our-story-detail bg-moving bg-cover" style="background-image:url({% static 'web/images/background/line.png' %})">
-                                    <h4 class="text-uppercase m-b20">2017-18</h4>
-                                    <h4 class="m-b20">Museum Expansion</h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged. </p>
+                                    <!-- <h4 class="text-uppercase m-b20">2017-18</h4> -->
+                                    <h4 class="m-b20">Transparent transactions</h4>
+                                    <p>The most important factor for any building project is quality. Our products are of the highest quality without compromising on quality and are presented at a reasonable price with secure transaction procedures.</p>
                                 </div>
                             </div>
                         </div>
