--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -60,10 +60,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'web/css/switcher.css' %}">    
 
     <!-- REVOLUTION SLIDER CSS -->
-    <link rel="stylesheet" type="text/css" href="plugins/revolution/revolution/css/settings.css' %}">
+    <link rel="stylesheet" type="text/css" href="plugins/revolution/revolution/css/settings.css">
 	
     <!-- REVOLUTION NAVIGATION STYLE -->
-    <link rel="stylesheet" type="text/css" href="plugins/revolution/revolution/css/navigation.css' %}">
+    <link rel="stylesheet" type="text/css" href="plugins/revolution/revolution/css/navigation.css">
     
     <!-- Google Fonts -->
     <link href="../../fonts.googleapis.com/cssad13.css'?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">  
@@ -105,11 +105,11 @@
 <script src="{% static 'web/js/switcher.js' %}"></script><!-- SWITCHER FUCTIONS  -->
 <!-- REVOLUTION JS FILES -->
 
-<script  src="plugins/revolution/revolution/{% static 'web/js/jquery.themepunch.tools.min.js' %}"></script>
-<script  src="plugins/revolution/revolution/{% static 'web/js/jquery.themepunch.revolution.min.js' %}"></script>
+<script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
+<script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
 
 <!-- SLIDER REVOLUTION 5.0 EXTENSIONS  (Load Extensions only on Local File Systems !  The following part can be removed on Server for On Demand Loading) -->	
-<script  src="plugins/revolution/revolution/{% static 'web/js/extensions/revolution-plugin.js' %}"></script>
+<script  src="{% static 'web/js/extensions/revolution-plugin.js' %}"></script>
 
 <!-- REVOLUTION SLIDER SCRIPT FILES -->
 <script  src="{% static 'web/js/rev-script-1.js' %}"></script>
