--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -60,10 +60,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'web/css/switcher.css' %}">    
 
     <!-- REVOLUTION SLIDER CSS -->
-    <link rel="stylesheet" type="text/css" href="plugins/revolution/revolution/css/settings.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'web/plugins/revolution/revolution/css/settings.css' %}">
 	
     <!-- REVOLUTION NAVIGATION STYLE -->
-    <link rel="stylesheet" type="text/css" href="plugins/revolution/revolution/css/navigation.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'web/plugins/revolution/revolution/css/navigation.css' %}">
     
     <!-- Google Fonts -->
     <link href="../../fonts.googleapis.com/cssad13.css'?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">  
@@ -80,49 +80,25 @@
 
     {% include 'web/partials/footer.html' %}
 
-<!-- JAVASCRIPT  FILES ========================================= --> 
-<script  src="{% static 'web/js/jquery-1.12.4.min.js' %}"></script><!-- JQUERY.MIN JS -->
-<script  src="{% static 'web/js/bootstrap.min.js' %}"></script><!-- BOOTSTRAP.MIN JS -->
-
-<script  src="{% static 'web/js/magnific-popup.min.js' %}"></script><!-- MAGNIFIC-POPUP JS -->
-
-<script  src="{% static 'web/js/waypoints.min.js' %}"></script><!-- WAYPOINTS JS -->
-<script  src="{% static 'web/js/counterup.min.js' %}"></script><!-- COUNTERUP JS -->
-<script  src="{% static 'web/js/waypoints-sticky.min.js' %}"></script><!-- COUNTERUP JS -->
-
-<script  src="{% static 'web/js/isotope.pkgd.min.js' %}"></script><!-- MASONRY  -->
-
-<script  src="{% static 'web/js/owl.carousel.min.js' %}"></script><!-- OWL  SLIDER  -->
+<script  src="{% static 'web/js/jquery-1.12.4.min.js' %}"></script>
+<script  src="{% static 'web/js/bootstrap.min.js' %}"></script>
+<script  src="{% static 'web/js/magnific-popup.min.js' %}"></script>
+<script  src="{% static 'web/js/waypoints.min.js' %}"></script>
+<script  src="{% static 'web/js/counterup.min.js' %}"></script>
+<script  src="{% static 'web/js/waypoints-sticky.min.js' %}"></script>
+<script  src="{% static 'web/js/isotope.pkgd.min.js' %}"></script>
+<script  src="{% static 'web/js/owl.carousel.min.js' %}"></script>
 <script src="{% static 'web/js/jquery.owl-filter.js' %}"></script>
-
-<script  src="{% static 'web/js/stellar.min.js' %}"></script><!-- PARALLAX BG IMAGE   --> 
-
-
-
-<script  src="{% static 'web/js/custom.js' %}"></script><!-- CUSTOM FUCTIONS  -->
-<script  src="{% static 'web/js/shortcode.js' %}"></script><!-- SHORTCODE FUCTIONS  -->
-<script  src="{% static 'web/js/jquery.bgscroll.js' %}"></script><!-- BACKGROUND SCROLL -->
-<script src="{% static 'web/js/switcher.js' %}"></script><!-- SWITCHER FUCTIONS  -->
-<!-- REVOLUTION JS FILES -->
-
+<script  src="{% static 'web/js/stellar.min.js' %}"></script>
+<script  src="{% static 'web/js/custom.js' %}"></script>
+<script  src="{% static 'web/js/shortcode.js' %}"></script>
+<script  src="{% static 'web/js/jquery.bgscroll.js' %}"></script>
+<script src="{% static 'web/js/switcher.js' %}"></script>
 <script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
 <script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
-
-<!-- SLIDER REVOLUTION 5.0 EXTENSIONS  (Load Extensions only on Local File Systems !  The following part can be removed on Server for On Demand Loading) -->	
-<script  src="{% static 'web/js/extensions/revolution-plugin.js' %}"></script>
-
-<!-- REVOLUTION SLIDER SCRIPT FILES -->
+<script  src="{% static 'web/plugins/revolution/revolution/js/extensions/revolution-plugin.js' %}"></script>
 <script  src="{% static 'web/js/rev-script-1.js' %}"></script>
 
-<!-- STYLE SWITCHER  ======= --> 
-<div class="styleswitcher">
-
-    <!-- <div class="switcher-btn-bx">
-        <a class="switch-btn">
-            <span class="fa fa-cog fa-spin"></span>
-        </a>
-    </div> -->
-    
     <div class="styleswitcher-inner">
     
         <h6 class="switcher-title">Color Skin</h6>
@@ -139,7 +115,7 @@
         
     </div>    
 </div>
-<!-- STYLE SWITCHER END ==== -->
+
 
 </body>
 
