--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -5,12 +5,9 @@
 	 
 <div class="page-wraper">
        	
-       
-        
         <!-- CONTENT START -->
         <div class="page-content">
-        
-
+    
             <!-- SLIDER START -->
             <div id="welcome_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="goodnews-header" data-source="gallery" style="background:#eeeeee;padding:0px;">
                 <div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.3.1">
@@ -24,7 +21,7 @@
                         data-easein="default" 
                         data-easeout="default" 
                         data-masterspeed="default"  
-                        data-thumb="{% static 'web/images/main-slider/slider1/slide1.jpg' %}"  
+                        data-thumb="../../static/web/images/main-slider/slider1/slide1.jpg"
                         data-rotate="0"  
                         data-fstransition="fade" 
                         data-fsmasterspeed="300" 
@@ -43,7 +40,7 @@
                         data-param10="" 
                         data-description="">
                             <!-- MAIN IMAGE -->
-                            <img src="{% static 'web/images/main-slider/slider1/slide1.jpg' %}"  alt=""  data-lazyload="{% static 'web/main-slider/slider1/slide1.jpg' %}" data-bgposition="center center" 
+                            <img src="{% static 'web/images/main-slider/slider1/slide1.jpg' %}"  alt=""  data-lazyload="{% static 'web/images/main-slider/slider1/slide1.jpg' %}" data-bgposition="center center" 
                             data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
                             <!-- LAYER NR. 1 [ for overlay ] -->
@@ -195,7 +192,7 @@
                         data-easein="default" 
                         data-easeout="default" 
                         data-masterspeed="default"  
-                        data-thumb="{% static 'web/images/main-slider/slider1/slide2.jpg' %}"  
+                        data-thumb="../../static/web/images/main-slider/slider1/slide2.jpg" 
                         data-rotate="0"  
                         data-fstransition="fade" 
                         data-fsmasterspeed="300" 
@@ -214,7 +211,7 @@
                         data-param10="" 
                         data-description="">
                             <!-- MAIN IMAGE -->
-                            <img src="{% static 'web/images/main-slider/slider1/slide2.jpg' %}"  alt=""  data-lazyload="{% static 'web/main-slider/slider1/slide2.jpg' %}" data-bgposition="center center" 
+                            <img src="{% static 'web/images/main-slider/slider1/slide2.jpg' %}"  alt=""  data-lazyload="{% static 'web/images/main-slider/slider1/slide2.jpg' %}" data-bgposition="center center" 
                             data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
                             <!-- LAYER NR. 1 [ for overlay ] -->
@@ -357,19 +354,13 @@
                         </li>
                         
                         
-                        <!-- SLIDE 3-->
-                        <li data-index="rs-903" 
-                        data-transition="fade" 
-                        data-slotamount="default" 
-                        data-hideafterloop="0" 
-                        data-hideslideonmobile="off"  
-                        data-easein="default" 
-                        data-easeout="default" 
-                        data-masterspeed="default"  
-                        data-thumb="{% static 'web/images/main-slider/slider1/slide3.jpg' %}"  
+                        
+                        <li data-index="rs-903" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  
+                        
                         data-rotate="0"  
                         data-fstransition="fade" 
                         data-fsmasterspeed="300" 
+                        data-thumb="../../static/web/images/main-slider/slider1/slide3.jpg"  
                         data-fsslotamount="7" 
                         data-saveperformance="off"  
                         data-title="" 
@@ -385,7 +376,7 @@
                         data-param10="" 
                         data-description="">
                             <!-- MAIN IMAGE -->
-                            <img src="{% static 'web/images/main-slider/slider1/slide3.jpg' %}"  alt=""  data-lazyload="{% static 'web/main-slider/slider1/slide3.jpg' %}" data-bgposition="center center" 
+                            <img src="{% static 'web/images/main-slider/slider1/slide3.jpg' %}"  alt=""  data-lazyload="{% static 'web/images/main-slider/slider1/slide3.jpg' %}" data-bgposition="center center" 
                             data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
                             <!-- LAYER NR. 1 [ for overlay ] -->
@@ -542,7 +533,7 @@
 
                  
             </div>
-            <!-- SLIDER END -->            
+            <!-- SLIDER END -->             
                  
             <!-- OUR SPECIALLIZATION START -->
             <div class="section-full mobile-page-padding bg-white  p-t80 p-b30 bg-repeat square_shape1" style="background-image:url({% static 'web/background/bg-5.png' %});">
